src/test/run-pass/lazy-init.rs


fn foo(x: int) { log(debug, x); }

fn main() { let mut x: int; if 1 > 2 { x = 12; } else { x = 10; } foo(x); }
